syntax = "proto3";
import "favourite_game.proto";

option java_package = "com.mr3y.ludi.datastore.model";
option java_multiple_files = true;

message UserFavouriteGames {
  repeated UserFavouriteGame favGame = 1;
}